# SB3DGS

./: .gitattributes  .gitignore  CMakeLists.txt  README.md  SB3DGS
include/: UICore.h  UImesh.h  UIobject.h  UIscene.h  button.h  camera.h  constants.h  editbox.h  face.h  gl_utils.h  image.h  launcher.h  light.h  material.h  mesh.h  object.h  point.h  scene.h  shaders.h  submesh.h  text.h  uibuilder.h  vertex.h
include/glad/: glad.h
src/: gl_utils.cpp  glad.c  launcher.cpp  main.cpp  uibuilder.cpp
src/Models/: camera.cpp  mesh.cpp  object.cpp  scene.cpp  submesh.cpp
src/Models/UI/: UImesh.cpp  UIscene.cpp  button.cpp  editbox.cpp  image.cpp  text.cpp
